# slumlord

./: Cargo.toml  README.md  idl.json  rust-toolchain.toml
slumlord/: Cargo.toml  README.md
slumlord-cli/: Cargo.toml
slumlord-cli/src/: main.rs  rpc_client.rs
slumlord-cli/src/subcmd/: balance.rs  init.rs  mod.rs
slumlord-lib/: Cargo.toml
slumlord-lib/src/: lib.rs
slumlord/src/: lib.rs
slumlord/tests/: mod.rs
slumlord/tests/common/: mod.rs
slumlord/tests/cpi/: evil_err_catcher.rs  good.rs  mod.rs
slumlord_interface/: Cargo.toml
slumlord_interface/src/: errors.rs  instructions.rs  lib.rs  typedefs.rs
