[workspace]
resolver = "2"
members = [
    "slumlord",
    "slumlord-lib",
    "slumlord_interface"
]

[workspace.dependencies]
borsh = ">=0.9"
bytemuck = "^1"
num-derive = ">=0.3"
num-traits = ">=0.2"
sanctum-macros = "^1"
sanctum-misc-utils = { git = "https://github.com/igneous-labs/sanctum-solana-utils.git", rev = "2d1718f" }
sanctum-system-program-lib = { git = "https://github.com/igneous-labs/sanctum-solana-utils.git", rev = "2d1718f" }
serde = "^1"
solana-program = "=1.16.20"
thiserror = "^1"

# workspace members
slumlord = { path = "./slumlord" }
slumlord-lib = { path = "./slumlord-lib" }
slumlord_interface = { path = "./slumlord_interface" }
