[package]
name = "slumlord-lib"
version = "1.0.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/igneous-labs/slumlord.git"

[dependencies]
bytemuck = { workspace = true }
sanctum-macros = { workspace = true }
solana-program = { workspace = true }
slumlord_interface = { workspace = true }
