[package]
name = "slumlord"
version = "1.0.0"
edition = "2021"

[features]
no-entrypoint = []

[lib]
crate-type = ["cdylib", "lib"]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
sanctum-misc-utils = { workspace = true }
sanctum-system-program-lib = { workspace = true }
slumlord-lib = { workspace = true }
slumlord_interface = { workspace = true }
solana-program = { workspace = true }
