[package]
name = "slumlord"
version = "1.0.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/igneous-labs/slumlord.git"

[features]
no-entrypoint = []

[lib]
crate-type = ["cdylib", "lib"]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
sanctum-misc-utils = { workspace = true }
sanctum-system-program-lib = { workspace = true }
slumlord-lib = { workspace = true }
slumlord_interface = { workspace = true }
solana-program = { workspace = true }

[dev-dependencies]
async-trait = { workspace = true }
sanctum-macros = { workspace = true }
sanctum-solana-test-utils = { workspace = true }
solana-program-test = { workspace = true }
solana-sdk = { workspace = true }
tokio = { workspace = true }
